examples/IngresWithTLS/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-app-service
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express #https://hub.docker.com/_/mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer # external Service (outside access able)
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081 # connect from line no 21
      nodePort: 30000 # (Range 30000-32767)
